Added Gitter link

--- a/README
+++ b/README
@@ -9,3 +9,5 @@ Documentation for this module could be found under following URL:
 
     http://www.grid.net.ru/nginx/upload.ru.html
 
+
+Join the chat at https://gitter.im/oursky/nginx-upload-module
